--- a/Day41-50/Day41/index.html
+++ b/Day41-50/Day41/index.html
@@ -1,4 +1,4 @@
-<h1>Book</h1>
+<!-- <h1>Book</h1>
 <h2>Chapter 1</h2>
 <h3>Section 1</h3>
 <h3>Section 2</h3>
@@ -7,4 +7,76 @@
 <h4>Diagram 1</h4>
 <h2>Chapter 3</h2>
 <h3>Section 1</h3>
-<h3>Section 2</h3>
+<h3>Section 2</h3> -->
+
+
+<!-- Paragraph tag -->
+<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, quam voluptatem earum nemo animi rem nobis atque
+    vitae? Ullam facilis ipsa deleniti reprehenderit voluptatum optio, cum repellat distinctio. Alias cum, molestiae
+    obcaecati in cupiditate voluptatibus ducimus error totam, esse doloribus iusto fugiat ea labore eius? Veniam esse,
+    quas tempore velit magni commodi ipsam enim quasi consequatur voluptatem ullam fugiat ipsa obcaecati corrupti odio
+    modi laboriosam id repellat, temporibus provident consectetur. Ducimus praesentium modi obcaecati, assumenda quia
+    pariatur excepturi animi quae exercitationem fugit consectetur expedita cupiditate quasi soluta laudantium, sunt
+    perspiciatis commodi eveniet itaque? Repellat ea ducimus inventore, commodi ab fugiat!</p>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores animi autem exercitationem, alias officia quasi
+    debitis cum minus eos inventore libero totam omnis quam. Porro ad dolor hic. Laboriosam numquam autem unde officiis
+    est veritatis dolor necessitatibus nisi saepe, nemo laudantium soluta accusamus ducimus laborum fugiat praesentium
+    dolorum at officia tempora veniam esse nihil quod? Inventore optio ab incidunt quia!</p>
+
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, adipisci enim? Nihil consequuntur iste incidunt ad
+    voluptates, inventore minima quaerat illum laborum ipsam illo, aut distinctio molestiae tenetur animi aliquam amet
+    error, cum porro! Deleniti ducimus ipsa animi iste quos, veritatis ab exercitationem excepturi earum eos doloribus
+    reiciendis officia id minus quod magnam reprehenderit eveniet perferendis facilis odit cumque totam voluptates
+    minima. Nemo porro labore dolor voluptas. Sint minus non hic cum nesciunt sequi veritatis eius, delectus reiciendis
+    incidunt perspiciatis praesentium ea, voluptas molestias ipsa rem maxime expedita iste impedit ad asperiores quam id
+    assumenda! Hic officia molestias quam vel quasi, quo laboriosam id sapiente inventore cumque quos repellendus
+    dolorem soluta, tempora consequatur optio at veritatis fuga nihil corporis reiciendis temporibus, commodi amet!
+    Animi repellendus adipisci suscipit minima necessitatibus quisquam similique totam inventore explicabo eaque, ullam
+    sit quis assumenda magnam, veniam autem deserunt. Molestias ex perspiciatis aperiam pariatur ut neque.</p> -->
+
+
+<!-- Self closing tags -->
+<!--  <br />, <img />, <hr />, <input /> -->
+<!-- <p>
+    To see a World in a Grain of Sand<br />
+    And a Heaven in a Wild Flower,<br />
+    Hold Infinity in the palm of your hand<br />
+    And Eternity in an hour.<br />
+    A Robin Redbreast in a Cage<br />
+    Puts all Heaven in a Rage.<br />
+    A dove house fill'd with doves and pigeons<br />
+    Shudders Hell thro' all its regions.<br />
+</p> -->
+
+
+<h1>William Blake</h1>
+
+<p>17 south molton street<br>
+Flat 3<br />
+London<br />
+W1K 5QF<br />
+United Kingdom</p>
+
+<hr>
+<p1>William Blake 17 south molton street London W1K 5QT UK William Blake (28 November 1757 – 12 August 1827) was an English
+poet, painter, and printmaker. Largely unrecognised during his life, Blake is now considered a seminal figure in the
+history of the poetry and visual art of the Romantic Age. What he called his "prophetic works" were said by 20th-century
+critic Northrop Frye to form "what is in proportion to its merits the least read body of poetry in the English
+language".[2] His visual artistry led 21st-century critic Jonathan Jones to proclaim him "far and away the greatest
+artist Britain has ever produced".[3] In 2002, Blake was placed at number 38 in the BBC's poll of the 100 Greatest
+Britons.[4] While he lived in London his entire life, except for three years spent in Felpham,[5] he produced a diverse
+and symbolically rich collection of works, which embraced the imagination as "the body of God"[6] or "human existence
+itself".[7]</p1>
+
+<p>Although Blake was considered mad by contemporaries for his idiosyncratic views, he is held in high regard
+by later critics for his expressiveness and creativity, and for the philosophical and mystical undercurrents within his
+work. His paintings and poetry have been characterised as part of the Romantic movement and as "Pre-Romantic".[8] In
+fact, he has been said to be "a key early proponent of both Romanticism and Nationalism".[9] A committed Christian who
+was hostile to the Church of England (indeed, to almost all forms of organised religion), Blake was influenced by the
+ideals and ambitions of the French and American revolutions.[10][11] Though later he rejected many of these political
+beliefs, he maintained an amiable relationship with the political activist Thomas Paine; he was also influenced by
+thinkers such as Emanuel Swedenborg.[12] Despite these known influences, the singularity of Blake's work makes him
+difficult to classify. The 19th-century scholar William Michael Rossetti characterised him as a "glorious luminary",[13]
+and "a man not forestalled by predecessors, nor to be classed with contemporaries, nor to be replaced by known or
+readily surmisable successors".[14]</p1>
