Add HTML enhancements and initial BeautifulSoup setup in main.py

--- a/Day41-50/Day45/website.html
+++ b/Day41-50/Day45/website.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FoXDev-404's Personal Site</title>
 </head>
 
 <body>
-  <h1 id="name">FoXDev-404 (PsychoIND)</h1>
+  <p><em>Final year B.Tech CSE student at MGMCoET, <span title="City in India">Noida</span>.</em></p>
   <p><em>Final year B.Tech CSE student at MGMCoET, Noida.</em></p>
   <p>Front End Web Developer. Passionate about coding, tech, and building cool projects.</p>
   <hr>
   <h3 class="heading">Projects and Learning</h3>
-  <ul>
+    <li>100 Days of Code - Python <span title="Intensive training program">Bootcamp</span></li>
     <li>100 Days of Code - Python Bootcamp</li>
     <li>Front End Web Development Projects</li>
     <li>Automation & Data Analysis Scripts</li>
   </ul>
   <hr>
-  <h3 class="heading">Links</h3>
-  <a href="https://github.com/FoXDev-404/PyMastery-100Days-100Projects" target="_blank">My GitHub Repo</a>
+  <a href="https://github.com/FoXDev-404/PyMastery-100Days-100Projects" target="_blank" rel="noopener">My GitHub Repo</a>
   <br>
+  <a href="https://mgmnoida.org" target="_blank" rel="noopener">MGMCoET, <span title="City in India">Noida</span></a>
   <a href="https://mgmnoida.org" target="_blank">MGMCoET, Noida</a>
 </body>
 
