Update image sources in index.html to use public directory

--- a/Day41-50/Day45/index.html
+++ b/Day41-50/Day45/index.html
@@ -62,8 +62,8 @@
 
     <section>
         <h2>Images</h2>
-        <img src="cat.jpg" alt="Cat picture" class="img-rounded">
-        <img src="dog.jpg" alt="Dog picture">
+        <img src="./public/cat.png" alt="Cat picture" class="img-rounded">
+        <img src="./public/dog.png" alt="Dog picture">
     </section>
 
     <footer>
